--- a/app/views/users/_learning_agreement_panel.erb
+++ b/app/views/users/_learning_agreement_panel.erb
@@ -70,7 +70,7 @@
 
   <div class="la-total ">
     <%unless admin %>
-      <button class="custom-button primary" id="add-la-subject" type="button">➕</button>
+      <button class="custom-button primary" id="add-la-subject" type="button"><i class="mdi mdi-plus"></i></button>
       <%= form.submit "Save", :class => "custom-button primary" %>
       <label id="la-server-msg"></label>
   <%end %>
