--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -98,7 +98,8 @@
 				vertical-align: middle
 				&.hidden
 					display: none
-.dashboard-container 
+.dashboard-container
+
 	@include flexBoxVendor
 	.left-column
 		flex-grow: 1
@@ -256,7 +257,12 @@
 						span:hover
 							text-decoration: underline
 
-
+#acceptance_letter
+	width: 100%
+	height: 400px
+	display: block
+#acceptance_letter_button
+	display: none
 @media (max-width: 768px)
 	.dashboard-container
 		flex-direction: column
@@ -274,7 +280,10 @@
 						margin: 0px
 						width: 100%
 						margin-top: 5px
-
+	#acceptance_letter
+		display: none
+	#acceptance_letter_button
+		display: inline-block
 #admin-settings-dialog
 	padding: 25px
 	display: none
@@ -337,3 +346,4 @@
 			h3.csv-category
 				color: #4664A2
 				margin-bottom: 4px
+
