--- a/app/views/users/admin_dashboard.html.erb
+++ b/app/views/users/admin_dashboard.html.erb
@@ -376,5 +376,6 @@
 
 
 <div class="intro-paragraph right s12">
+  <a download href="<%= "#{RELATIVE_URL}/generate_acceptance_letters" %>"><button class="custom-button primary">Generate Acceptance Letters</button></a>
   <button class="custom-button primary" id="csv-dialog-button">Download CSV</button>
 </div>
