--- a/app/views/users/register_choice.html.erb
+++ b/app/views/users/register_choice.html.erb
@@ -1,3 +1,13 @@
 <h1>Welcome, <span class="email"> <%=@nominee.email%></span></h1>
-<div><%= button_to "Register with EIDAS", new_user_sso_session_path, :method=> :get, form_class: "button", :class=> "custom-button primary", :disabled => true  %></div>
+<!--<div><%#= button_to "Register with EIDAS", new_user_sso_session_path, :method=> :get, form_class: "button", :class=> "custom-button primary", :disabled => true  %></div>-->
+
+<%= form_tag new_user_sso_session_path, :method => :post, :id => "saml-form",   :enforce_utf8=> false, :authenticity_token => false do %>
+  <% if @post_params != nil %>
+    <% @post_params.each do |key, value| -%>
+      <%= hidden_field_tag key, value %>
+    <%end%>
+  <% end %>
+  <button id="certificate_button" class="custom-button primary">Register with EIDAS</button>
+<% end %>
+
  <div><%= button_to "Register with email and password", "#{RELATIVE_URL}/register/"+@nominee.registration_token+"/register_with_email_and_password", :method=> :get, form_class: "button", :class=> "custom-button primary" %></div>
