--- a/app/assets/stylesheets/dashboard/admin-dashboard.sass
+++ b/app/assets/stylesheets/dashboard/admin-dashboard.sass
@@ -147,7 +147,7 @@
 	@include flexBoxVendor
 .table-header
 	@include flexBoxVendor
-#several-nominee-dialog
+#several-nominee-dialog, #delete-user-dialog
 	padding: 25px
 	display: none
 	canvas#canvas
