--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -170,7 +170,19 @@
 <p class="intro-paragraph  footer-paragraph s12">
 	<a download href="<%= "#{RELATIVE_URL}/download_all_files/#{current_user.id}" %>"><button class="custom-button primary">Download all files</button></a>
 	<%if current_user.progress_status === "accepted" %><a download href="<%= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}" %>"><button class="custom-button primary">Generate Acceptance Letter</button></a><%end%>
+	<button class="custom-button primary" id="delete-user">Delete user</button>
 	<br/>
 	<span class="registered_at"><b>Registered</b>: <%=current_user.created_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %>. &nbsp; &nbsp;  &nbsp; <b>Last updated:</b>  <%=current_user.updated_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %></span>
 </p>
 
+
+<div id="delete-user-dialog" >
+	<h2 class="title">Delete user</h2>
+	<button class="transparent-button action-button right close" id="delete-user-dialog-close"><i class="mdi mdi-close"></i></button>
+	<div class="flex-container">
+		<%= button_to "Archive user", "#{RELATIVE_URL}/users/archive/#{current_user.id}", :method=> :delete, :class => "custom-button", :disabled => true, :form_class =>"inline"%>
+		<%= button_to "Delete permanently", "#{RELATIVE_URL}/users/delete/#{current_user.id}", :method=> :delete,  data: { confirm: "This action is permanent. Are you sure you want to delete this user?" }, :class => "custom-button red-button", :form_class =>"inline"%>
+
+	</div>
+
+</div>
