--- a/app/assets/stylesheets/buttons.sass
+++ b/app/assets/stylesheets/buttons.sass
@@ -28,7 +28,11 @@
             transform: scale(1)
     &:hover
         transform: scale(1.07)
-
+    #logo-eidas
+        width: 17px
+        float: left
+        margin: -3px
+        margin-right: 10px
 
 .actions
     padding: 10px
