--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -326,6 +326,12 @@
 		display: inline-block
 	.close
 		margin: -18px
+	.floating
+		float: right
+		margin-top: -35px
+		margin-right: 50px
+		position: absolute
+		right: 0
 	.flex-container
 		display: flex
 		flex-direction: row
