--- a/app/assets/stylesheets/student_application_form/progress.sass
+++ b/app/assets/stylesheets/student_application_form/progress.sass
@@ -15,6 +15,13 @@
 	.progress-balls
 		z-index: 1
 		margin-top: -13px
+		.progress_btn
+			margin: 0px
+			padding: 0px
+			border: 0
+			background: none
+			outline: none
+			cursor: pointer
 	a .progress-ball
 		transition: 0.2s all ease-in
 	a:hover .progress-ball
