--- a/app/assets/stylesheets/dashboard/dashboard.sass
+++ b/app/assets/stylesheets/dashboard/dashboard.sass
@@ -353,3 +353,21 @@
 				color: #4664A2
 				margin-bottom: 4px
 
+#acceptance-letter-dialog
+	padding: 25px
+	display: none
+	.title
+		margin-top: 0
+		display: inline-block
+	.close
+		margin: -18px
+	.al-format
+		display: inline-block
+		margin-right: 10px
+	label
+		margin-right: 10px
+		color: #555
+	input
+		padding: 3px 4px 4px 4px
+		font-family: inherit
+		font-size: 1em
